# matrix

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
benches/: lib.rs
benches/format/: compressed.rs  conventional.rs  mod.rs
src/: algebra.rs  band.rs  banded.rs  compressed.rs  conventional.rs  decomp.rs  decomposition.rs  dense.rs  diagonal.rs  element.rs  generic.rs  lib.rs  number.rs  operation.rs  packed.rs  position.rs  prelude.rs  size.rs  sparse.rs  storage.rs  triangular.rs
src/algebra/: mod.rs
src/decomposition/: mod.rs
src/format/: mod.rs
src/format/banded/: convert.rs  mod.rs  operation.rs
src/format/compressed/: algebra.rs  convert.rs  mod.rs  operation.rs
src/format/conventional/: algebra.rs  convert.rs  decomposition.rs  mod.rs
src/format/conventional/decomposition/: acceleration.rs  mod.rs
src/format/conventional/operation/: acceleration.rs  mod.rs
src/format/diagonal/: convert.rs  mod.rs  operation.rs
src/format/packed/: convert.rs  mod.rs  operation.rs
src/storage/: banded.rs  compressed.rs  conventional.rs  diagonal.rs  mod.rs  packed.rs
src/storage/banded/: convert.rs  mod.rs
src/storage/compressed/: convert.rs  mod.rs
src/storage/conventional/: convert.rs  mod.rs
src/storage/diagonal/: convert.rs  mod.rs
src/storage/packed/: convert.rs  mod.rs
tests/: algebra.rs  decomp.rs  decomposition.rs  lib.rs
