[package]
name = "matrix"
version = "0.21.9"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a matrix laboratory."
documentation = "https://docs.rs/matrix"
homepage = "https://github.com/stainless-steel/matrix"
repository = "https://github.com/stainless-steel/matrix"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]

[features]
default = ["acceleration"]
acceleration = ["blas", "lapack"]

[dependencies.blas]
version = "0.18"
optional = true

[dependencies.lapack]
version = "0.13"
optional = true

[dependencies.num-complex]
version = "0.1"
default-features = false

[dependencies.num-traits]
version = "0.1"

[dev-dependencies]
assert = "0.7"
random = "0.12"
