[package]
name = "matrix"
version = "0.21.11"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a matrix laboratory."
documentation = "https://docs.rs/matrix"
homepage = "https://github.com/stainless-steel/matrix"
repository = "https://github.com/stainless-steel/matrix"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]

[features]
default = ["acceleration"]
acceleration = ["blas", "lapack", "openblas-src"]

[dependencies]
blas = { version = "0.19", optional = true }
lapack = { version = "0.14", optional = true }
num-complex = { version = "0.1", default-features = false }
num-traits = "0.1"
openblas-src = { version = "0.5", optional = true }

[dev-dependencies]
assert = "0.7"
random = "0.12"
